<resources>

    <string name="app_name">SendMeal</string>

    <!--Home -->
    <string name="msj_bienvenida">Bienvenido!</string>

    <string name="menu_registrar_usuario">Registrar Usuario</string>
    <string name="menu_alta_platos">Alta plato</string>
    <string name="menu_alta_pedido">Alta pedido</string>
    <string name="menu_busqueda_plato">Busqueda plato</string>
    <string name="menu_lista_plato">Lista Plato</string>
    <string name="menu_crear_item_pedido">Crear item </string>
    <string name="menu_abrir_mapa">Mapa</string>


    <!--Pantalla de Registro -->
    <string name="registro_titulo">Registrar Usuario</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_clave">Clave</string>
    <string name="registro_clave2">Repetir Clave</string>
    <string name="registro_correo">Correo Electronico</string>
    <string name="registro_tarjeta">Tarjeta de Credito</string>
    <string name="registro_numero_tarjeta">Número</string>
    <string name="registro_ccv">CCV</string>
    <string name="registro_fecha_vencimiento">MM/AA</string>
    <string name="registro_tipo_cuenta">Tipo de Cuenta</string>
    <string name="registro_tipo_base">Base</string>
    <string name="registro_tipo_premium">Premium</string>
    <string name="registro_tipo_full">Full</string>
    <string name="registro_credito">Credito Inicial</string>
    <string name="registro_notificar">Notificar por correo electronico</string>
    <string name="registro_notificar_button_off">NO ENVIAR NOTIFICACIONES AL MAIL</string>
    <string name="registro_notificar_button_on">ENVIAR NOTIFICACIONES AL MAIL</string>
    <string name="registro_vendedor">Es vendedor</string>
    <string name="registro_cbu_alias">Alias CBU</string>
    <string name="registro_cbu">CBU</string>
    <string name="acepta_condiciones">Acepta terminos y condiciones</string>
    <string name="registrar_registrar">REGISTRAR</string>

    <!--<string name=""></string>-->

    <!--Tool Bar -->


    <!-- Alta de platos -->
    <string name="alta_plato_id">Id</string>
    <string name="alta_plato_nombre">Nombre</string>
    <string name="alta_plato_descripcion">Descripcion</string>
    <string name="alta_plato_precio">Precio</string>
    <string name="alta_plato_calorias">Calorias</string>
    <string name="alta_plato_guardar">Guardar</string>
    <string name="button_guardar">GUARDAR</string>
    <string name="button_cancel">CANCELAR</string>
    <string name="button_agregar_imagen">IMAGEN</string>


    <!--Lista de platos -->

    <string name="lista_platos_imagen">imagen_plato</string>
    <string name="lista_platos_editar">EDITAR</string>
    <string name="lista_platos_quitar">QUITAR</string>
    <string name="lista_platos_oferta">OFERTA</string>

    <string name="titulo_dialog_quitar">ELIMINAR UN PLATO</string>
    <string name="mensaje_dialog_quitar">¿Desea eliminar el plato de la lista?</string>
    <string name="confirmir_quitar">CONFIRMAR</string>
    <string name="cancelar_quitar">CANCELAR</string>

    <string name="channel_name">"Canal_1</string>
    <string name="channel_description">el canal 1</string>

    <!--Busqueda -->
    <string name="button_buscar_plato">BUSCAR</string>
    <string name="plato_nombre">Nombre plato</string>
    <string name="precio_plato_max">Precio Maximo</string>
    <string name="precio_plato_min">Precio Minimo</string>
    <string name="button_cancel_busqueda">CANCELAR</string>
    <string name="title_activity_alta_pedido">AltaPedidoActivity</string>


    <string name="pedido_latitud">Latitud</string>
    <string name="pedido_longitud">Longitud</string>
    <string name="pedido_estado">Estado</string>
    <string name="button_pedido_crear">CREAR</string>
    <string name="button_pedido_enviar">ENVIAR</string>


    <string name="cantidad_plato">Cantidad</string>
    <string name="button_agregar_item">Agregar</string>
    <string name="title_activity_maps">Map</string>


    <string name="seleccionar_ubicacion">SELECCIONAR UBICACION</string>
    <string name="title_activity_ver_pedidos_en_mapa">Map</string>
    <string name="ver_pedidosMap">Ver ubicacion de pedidos</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
    This is the name that users will see when interacting with this channel.
    It should describe the category of notifications that will be sent through this channel
 -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>


    <!--LAB 06-->
    <string name="permisos_titulo">Solicitud de permisos</string>
    <string name="permiso_camera">Esta funcion requiere permiso de camara</string>



</resources>
