<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_titulo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_nombre" />

        <EditText
            android:id="@+id/regNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_clave" />

        <EditText
            android:id="@+id/regClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_clave2" />

        <EditText
            android:id="@+id/regClave2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_correo" />

        <EditText
            android:id="@+id/regMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_tarjeta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/regNro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/registro_numero_tarjeta"
                android:inputType="number"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/regDigito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/registro_ccv"
                android:inputType="number" />

            <EditText
                android:id="@+id/regVto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/registro_fecha_vencimiento"
                android:inputType="number" />
        </LinearLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_tipo_cuenta" />

            <RadioButton
                android:id="@+id/optBase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_tipo_base" />

            <RadioButton
                android:id="@+id/optPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_tipo_premium" />

            <RadioButton
                android:id="@+id/optFull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_tipo_full" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_credito" />

        <SeekBar
            android:id="@+id/regCredito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_notificar" />

        <ToggleButton
            android:id="@+id/optNotificarMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/registro_notificar_button_off"
            android:textOn="@string/registro_notificar_button_on" />

        <Switch
            android:id="@+id/optEsVendedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_vendedor" />

        <LinearLayout
            android:id="@+id/layoutCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_cbu_alias" />

            <EditText
                android:id="@+id/ctaAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_cbu" />

            <EditText
                android:id="@+id/ctaCBU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/aceptaCondiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/acepta_condiciones" />

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_registrar" />
    </LinearLayout>
</ScrollView>