<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="6dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    style="?android:attr/buttonBarButtonStyle"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/plato_imagen"
            android:layout_width="169dp"
            android:layout_height="187dp"
            android:layout_weight="1"
            android:contentDescription="@string/lista_platos_imagen"
            app:srcCompat="@drawable/hamburguesa" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPlatoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta_plato_nombre"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPlatoPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta_plato_precio"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvdescripcionPlato"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:text="@string/alta_plato_descripcion"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonEditar"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/lista_platos_editar" />

                <Button
                    android:id="@+id/buttonQuitar"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:text="@string/lista_platos_quitar" />

                <Button
                    android:id="@+id/buttonOferta"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lista_platos_oferta" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>