<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/platoImagen"
            android:layout_width="338dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/lista_platos_imagen"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/platoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta_plato_nombre" />

            <TextView
                android:id="@+id/platoPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alta_plato_precio" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>