<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AltaPedidoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <include layout="@layout/toolbar_back"></include>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPedidoLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPedidoLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pedido_latitud"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPedidoLng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPedidoLng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pedido_longitud"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnUbicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_ubicacion" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPedidoEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCrearPedido"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_pedido_crear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnEnvarPedido"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEnvarPedido"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_pedido_enviar"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnCrearPedido" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonAgregarItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_agregar_item"
                app:layout_constraintEnd_toStartOf="@+id/btnEnvarPedido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>